# fpv_onboard_computer

./: CMakeLists.txt
config/: camera_intrinsic.xml  config.yaml  config_desktop.yaml
include/: camera_node.hpp  clock.hpp  const.hpp  control_node.hpp  control_sync.hpp  detector.hpp  flight_control_sync.hpp  log_node.hpp  pidcontroller.hpp  protocol.hpp  recv_node.hpp  send_node.hpp  socket_nodes.hpp  struct.hpp  telem.hpp  telem_async.hpp  telemetry_async.hpp  topic.hpp  utils.hpp
log/: 10-20_14-45-27_log.csv  10-22_17-18-07_log.csv  10-22_17-18-19_log.csv  10-22_17-19-51.avi
src/: altitude_control.cpp  camera_node.cpp  clock.cpp  control_node.cpp  control_sync.cpp  detector.cpp  flight_control_sync.cpp  log_node.cpp  main.cpp  mission.cpp  pidcontroller.cpp  recv_node.cpp  send_node.cpp  shared_ref.cpp  socket_nodes.cpp  telem.cpp  telem_async.cpp  telemetry_async.cpp  topics.cpp  utils.cpp
